--- a/web.html
+++ b/web.html
@@ -15,11 +15,12 @@
             justify-content: center;
             height: 100vh;
             margin: 0;
+            position: relative;
         }
         h1 {
             margin-bottom: 20px;
         }
-        button {
+        button, input[type="password"], input[type="text"] {
             margin: 10px;
             padding: 10px 20px;
             font-size: 16px;
@@ -32,38 +33,117 @@
         button:hover {
             background-color: #666;
         }
-        #video-container {
+        #password-container, #question-container, #video-container {
             display: none;
-            margin-top: 20px;
+            text-align: center;
         }
         iframe {
             width: 640px;
             height: 360px;
             border: none;
         }
+        #dont-click {
+            position: absolute;
+            top: 10px;
+            right: 10px;
+            background-color: #444;
+            padding: 5px 10px;
+            font-size: 12px;
+            border-radius: 5px;
+            cursor: pointer;
+            color: #fff;
+        }
+        #dont-click:hover {
+            background-color: #666;
+        }
     </style>
 </head>
 <body>
     <h1>Elige tu idioma / Choose your language</h1>
-    <button onclick="showVideo('es')">Español</button>
-    <button onclick="showVideo('en')">English</button>
+    <button id="btn-es" onclick="selectLanguage('es')">Español</button>
+    <button id="btn-en" onclick="selectLanguage('en')">English</button>
+
+    <div id="dont-click" onclick="openLink()">Don't click here</div>
+
+    <div id="password-container">
+        <h1 id="password-title">Introduce la contraseña</h1>
+        <input type="password" id="password" placeholder="Contraseña">
+        <button onclick="checkPassword()">Entrar</button>
+    </div>
+
+    <div id="question-container">
+        <h1 id="security-question"></h1>
+        <input type="text" id="answer" placeholder="Tu respuesta">
+        <button onclick="checkAnswer()">Enviar</button>
+    </div>
 
     <div id="video-container">
         <iframe id="video" src="" allowfullscreen></iframe>
     </div>
 
     <script>
-        function showVideo(language) {
-            var videoContainer = document.getElementById('video-container');
-            var video = document.getElementById('video');
+        var selectedLanguage = '';
 
-            if (language === 'es') {
-                video.src = 'https://www.youtube.com/embed/ybW06A8IkAo';
-            } else if (language === 'en') {
-                video.src = 'https://www.youtube.com/embed/vHhXDqEev3g';
+        function selectLanguage(language) {
+            selectedLanguage = language;
+            document.querySelector('h1').style.display = 'none';
+            document.getElementById('btn-es').style.display = 'none';
+            document.getElementById('btn-en').style.display = 'none';
+            document.getElementById('password-container').style.display = 'block';
+            
+            if (selectedLanguage === 'en') {
+                document.getElementById('password-title').innerText = 'Enter the password';
+                document.querySelector('input[type="password"]').placeholder = 'Password';
+                document.querySelector('#password-container button').innerText = 'Enter';
+                document.querySelector('input[type="text"]').placeholder = 'Your answer';
+                document.querySelector('#question-container button').innerText = 'Submit';
             }
+        }
 
-            videoContainer.style.display = 'block';
+        function checkPassword() {
+            var password = document.getElementById('password').value;
+            if (password === '1902') {
+                document.getElementById('password-container').style.display = 'none';
+                var questionContainer = document.getElementById('question-container');
+                var securityQuestion = document.getElementById('security-question');
+
+                if (selectedLanguage === 'es') {
+                    securityQuestion.innerText = '¿cual es el instagram de Terracraft (o del dueño)? (inserta su Instagram sin el @)';
+                } else if (selectedLanguage === 'en') {
+                    securityQuestion.innerText = 'What was the last SMP that Cylan was a part of?';
+                }
+
+                questionContainer.style.display = 'block';
+            } else {
+                alert(selectedLanguage === 'es' ? 'Contraseña incorrecta' : 'Incorrect password');
+            }
+        }
+
+        function checkAnswer() {
+            var answer = document.getElementById('answer').value.toLowerCase();
+            var correctAnswersEs = ['reksa__l', 'terracraft_smp9']; // Respuestas correctas en español
+            var correctAnswersEn = ['tomatecraft', 'mundus smp']; // Respuestas correctas en inglés
+
+            if ((selectedLanguage === 'es' && correctAnswersEs.includes(answer)) ||
+                (selectedLanguage === 'en' && correctAnswersEn.includes(answer))) {
+                document.getElementById('question-container').style.display = 'none';
+                var videoContainer = document.getElementById('video-container');
+                var video = document.getElementById('video');
+
+                if (selectedLanguage === 'es') {
+                    video.src = 'https://www.youtube.com/embed/HJzaqiclbyE';
+                } else if (selectedLanguage === 'en') {
+                    video.src = 'https://www.youtube.com/embed/mHbBxJuPo-Y';
+                }
+
+                videoContainer.style.display = 'block';
+            } else {
+                alert(selectedLanguage === 'es' ? 'Respuesta incorrecta' : 'Incorrect answer');
+            }
+        }
+
+        function openLink() {
+            window.open('https://x.com/CylanSmp', '_blank');
         }
     </script>
 </body>
